--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Masonry Layout</title>
+  <title>Anatolii Chumak Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,10 +14,10 @@
       <div id="aboutButton" class="nav_element nav_about">About</div>
       <div id="peopleButton" class="nav_element">People & Portraits</div>
       <div id="childrenButton" class="nav_element">Kids & Family</div>
-      <div id="InteriorsButton" class="nav_element">Spaces & Interiors</div>
-      <div id="ProductsButton" class="nav_element">Products & Still Life</div>
-      <div id="RetouchButton" class="nav_element">Retouch</div>
-      <div id="RestorationButton" class="nav_element">Restoration</div>
+      <div id="interiorsButton" class="nav_element">Spaces & Interiors</div>
+      <div id="productsButton" class="nav_element">Products & Still Life</div>
+      <div id="retouchButton" class="nav_element">Retouch</div>
+      <div id="restorationButton" class="nav_element">Restoration</div>
     </nav>
     <div class="masonry">
    </div>
