--- a/index.html
+++ b/index.html
@@ -26,10 +26,22 @@
   <div class="carosel">
    
     <div class="img_block">
+      
+      <div id="imgwrapperprev" class="imgwrapper prev" > 
+        <img id="imgprev" class="img" alt="">
+      </div>
+      <div id="imgwrappercur" class="imgwrapper cur">
+        <img id="imgcur" class="img" alt="">
+      </div>
+      <div id="imgwrappernext" class="imgwrapper next" > 
+        <img id="imgnext" class="img" alt="">
+      </div>
+
       <div class="arrow arrow_left"><</div>
-      <img id="imgfull" class="img" alt="">
       <div class="arrow arrow_right" >></div>
       <div class="close">X</div>
+
+     
     </div>
    
   </div>    
